main/default/objects/Project__c/fields/Agile_RAID__c.field-meta.xml
<CustomField>
    <fullName>Agile_RAID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agile RAID</label>
    <referenceTo>Agile_RAID__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>