main/default/objects/Project__c/fields/Agile_RAID_Message__c.field-meta.xml
<CustomField>
    <fullName>Agile_RAID_Message__c</fullName>
    <label>Agile RAID Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>