main/default/objects/Project__c/fields/Agile_RAID_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Agile_RAID_Page_URL__c</fullName>
    <label>Agile RAID Page URL</label>
    <type>Url</type>
</CustomField>