main/default/objects/Project__c/fields/Agile_RAID_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Agile_RAID_Tag_Line__c</fullName>
    <label>Agile RAID Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>