main/default/objects/Project__c/fields/Default_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Default_Backlog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Backlog</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>