main/default/objects/Project__c/fields/Dev_Count__c.field-meta.xml
<CustomField>
    <fullName>Dev_Count__c</fullName>
    <label>Dev Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>