main/default/objects/Project__c/fields/Do_Not_Require_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Require_Sprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Require Sprint</label>
    <type>Checkbox</type>
</CustomField>