main/default/objects/Project__c/fields/Enable_Partner_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Enable_Partner_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Partner Visibility</label>
    <type>Checkbox</type>
</CustomField>