main/default/objects/Project__c/fields/Feature_Count__c.field-meta.xml
<CustomField>
    <fullName>Feature_Count__c</fullName>
    <label>Feature Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>