main/default/objects/Project__c/fields/Functionality_Count__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Count__c</fullName>
    <label>Functionality Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>