main/default/objects/Project__c/fields/Next_Release__c.field-meta.xml
<CustomField>
    <fullName>Next_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>