main/default/objects/Project__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>