main/default/objects/Project__c/fields/QA_Count__c.field-meta.xml
<CustomField>
    <fullName>QA_Count__c</fullName>
    <label>QA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>