main/default/objects/Project__c/fields/QA_User__c.field-meta.xml
<CustomField>
    <fullName>QA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAPM-384</description>
    <label>QA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Users</relationshipName>
    <type>Lookup</type>
</CustomField>