main/default/objects/Project__c/fields/Starting_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Starting_Task_Number__c</fullName>
    <label>Starting Task Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>