main/default/objects/Project__c/fields/Target_Points__c.field-meta.xml
<CustomField>
    <fullName>Target_Points__c</fullName>
    <label>Target Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>