main/default/objects/Project__c/fields/Task_Number_Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Task_Number_Display_Format__c</fullName>
    <label>Task Number Display Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>