main/default/objects/Project__c/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>true</active>
    <label>Support</label>
</RecordType>